hphp/test/slow/parser/php-namespace-conflict-5.php.expectf

Fatal error: Cannot use Foo\string as string because the name is already in us%s in %s on line 4
